crates/brokkr-cli/src/tui/snapshots/notice_run_notes_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌graph─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ∙ ∙ ∙ BROKKR ]┐"
"│note  capability-gap — intake: optional capability gap: no MCP server github                                                                                  │"
"│note  fallback — seat: intake · selected opus via claude (fallback #1; not the agent's first choice)                                                          │"
"│                                                                                                                                                              │"
"│              ┌─⏺ simplicity─┐                                                                                                                                │"
"│   ⏺ intake──ᐳ┤  positions   ├──ᐳ⏺ review──ᐳ∙ chief                                                                                                           │"
"│              └─⏺ robustness─┘                                                                                                                                │"
"│   intake                    design                                                                                                                           │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌seats─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│participant                 status    attempts turns cost    tokens model boundary activity                                                                   │"
"│intake                      succeeded 1        3     $0.0313 —      —     —        intook · 2m03s                                                             │"
"│                                                                                   ↳ intake · selected opus via claude (fallback #1; not the agent's first cho│"
"│design                      working   1        Σ 2   —       —      —     —        4 members ↓                                                                │"
"│design:positions:simplicity succeeded 1        —     —       —      —     —        0s                                                                         │"
"│design:positions:robustness succeeded 1        —     —       —      —     —        0s                                                                         │"
"│design:review:only          succeeded 1        —     —       —      —     —        0s                                                                         │"
"│design:chief                working   1        2     —       —      —     —        Write · specs/interactive-tui/spec.md                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌trail─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│1  run/started  one derivation, three surfaces…                                                                                                               │"
"│2  phase/entered  intake                                                                                                                                      │"
"│7  effect/succeeded  intake · intook                                                                                                                          │"
"│8  transition/decided  INTAKE-OK intake → design · intook                                                                                                     │"
"│9  phase/entered  design                                                                                                                                      │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-7                                                                                                                                                "
"←→ rail · ↑↓ lanes · Enter scope phase · Tab pane · Esc back · / filter · r refresh · ? help · q quit                                                           "
