crates/brokkr-cli/src/tui/snapshots/notice_transcript_counts_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌seat──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│intake · succeeded                                                                                                                                            │"
"│terminal  effect/succeeded · 2026-01-01T00:02:03Z                                                                                                             │"
"│transcript  claude-session · abcd-1234 · home /home/operator/.claude/projects                                                                                 │"
"│full session: claude --resume abcd-1234                                                                                                                       │"
"│selected by  —                                                                                                                                                │"
"│model     — (claimed) · boundary —                                                                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌checkpoints───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│3  Read  model —  boundary —  effort —  tokens —  docs/decisions/0014-interactive-tui.md  2026-01-01T00:00:00Z                                                │"
"│—  claude-session-finished  model —  boundary —  effort —  tokens —  —  2026-01-01T00:00:05Z                                                                  │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌transcript────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│#1 turn 0 · 2026-01-01T00:00:05Z                                                                                                                              │"
"│  prose of turn 0                                                                                                                                             │"
"│transcript truncated (size cap)                                                                                                                               │"
"│malformed transcript lines skipped: 2                                                                                                                         │"
"│unrecognized transcript records: 3                                                                                                                            │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs · run run-7 · seat eff-i · scoped eff-i                                                                                                                    "
"↑↓/jk scroll · g/G top/bottom · Tab pane · Esc back · / filter · r refresh · ? help · q quit                                                                    "
